# driving_recoder

./: README.md
AiShow/app/: CMakeLists.txt  build.gradle
AiShow/app/src/androidTest/java/cqj/aishow/: ExampleInstrumentedTest.java
AiShow/app/src/main/: AndroidManifest.xml
AiShow/app/src/main/assets/: ssd_pred_net
AiShow/app/src/main/cpp/: native-lib.cpp
AiShow/app/src/main/cpp/audio/: android_debug.h  audio_player.cpp  audio_recorder.cpp  audio_recorder.h  buf_manager.h  debug_utils.cpp
AiShow/app/src/main/cpp/camera/: camera_manager.cpp  camera_manager.h
AiShow/app/src/main/cpp/face_lib/: faceimp.h
AiShow/app/src/main/cpp/ffmpeg/libavutil/: ffversion.h
AiShow/app/src/main/cpp/imagereader/: image_reader.cpp  image_reader.h
AiShow/app/src/main/cpp/jniimp/: impproc.cpp  impproc.h
AiShow/app/src/main/cpp/mediacodec/: rtmp.cpp  rtmp.h
AiShow/app/src/main/cpp/mtcnn/: mtcnn_imp.h
AiShow/app/src/main/cpp/utils/: native_debug.h  notifier.h
AiShow/app/src/main/java/cqj/aishow/: CameraView.java  ImageSet.java  MainActivity.java
AiShow/app/src/main/res/layout/: activity_imageset.xml  activity_main.xml
AiShow/app/src/main/res/values/: strings.xml
AiShow/app/src/test/java/cqj/aishow/: ExampleUnitTest.java
cv_lib/: CMakeLists.txt  README.md
cv_lib/face_lib/: CMakeLists.txt  faceimp.cpp
cv_lib/face_lib/face/: newface.cpp  newface.h  preprocess.h
cv_lib/face_lib/mtcnn/: mtcnn.cpp  mtcnn.h
cv_lib/face_lib/ssd/: detect.h  ssd.cpp  ssd.h
cv_lib/face_lib/utils/: caffe2_net.h  utils.h
cv_lib/ffmpeg_scripts/: config.sh  x264_android.sh
cv_lib/ffmpeg_scripts/bak/: ffmpeg_android_config.sh  ffmpeg_android_make.sh  ffmpeg_shared_make.sh  ffmpeg_static_make.sh
cv_lib/mtcnn/: CMakeLists.txt  mtcnn.cpp  mtcnn.h  mtcnn_imp.cpp
ssd.pytorch/: 320_ssd.py  README.md  eval.py  ssd.py  testanswer.txt  train.py
ssd.pytorch/demo/: live.py
ssd.pytorch/layers/modules/: l2norm.py  multibox_loss.py
ssd.pytorch/utils/: augmentations.py
